--- a/caddy/caddy/index.html
+++ b/caddy/caddy/index.html
@@ -13,7 +13,7 @@
 <h1>Caddy web server.</h1>
 <p>If you see this page, Caddy container works.</p>
 
-<p>More instructions about this image is <a href="//github.com/abiosoft/caddy-docker/blob/master/README.md" target="_blank">here</a>.<p>
+<p>More instructions about this image is <a href="//github.com/wenerme/dockerfiles/tree/master/caddy" target="_blank">here</a>.<p>
 <p>More instructions about Caddy is <a href="//caddyserver.com/docs" target="_blank">here</a>.<p>
 </body>
 </html>
